--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -25,17 +25,24 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     wearApp project(':wear')
-    compile 'com.google.android.gms:play-services:10.0.1'
-    compile 'com.android.support:appcompat-v7:25.1.1'
 
-    compile 'com.jakewharton:butterknife:8.5.1'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
-    compile 'com.jakewharton.timber:timber:4.5.1'
 
     dependencies {
         compile 'com.android.support.constraint:constraint-layout:1.0.0-beta4'
     }
-    compile 'com.android.support.constraint:constraint-layout:1.0.0-beta5'
 
+//    compile 'com.google.android.gms:play-services:10.2.0'
+    compile 'com.android.support:appcompat-v7:25.1.1'
+    compile 'com.jakewharton:butterknife:8.5.1'
+    compile 'com.jakewharton.timber:timber:4.5.1'
+    compile 'com.android.support.constraint:constraint-layout:1.0.0-beta5'
+    compile 'com.google.firebase:firebase-database:10.2.0'
+    compile 'com.google.firebase:firebase-auth:10.2.0'
+    compile 'com.google.android.gms:play-services-auth:10.2.0'
     testCompile 'junit:junit:4.12'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
 }
+
+
+
+apply plugin: 'com.google.gms.google-services'
